# daydreamer

./: .gitignore  AGENTS.MD  AI_PRIMER.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  CHAT_README.md  DMN_README.md  OLLAMA_MODEL_GUIDE.md  README.md  README_NEW.md  RESEARCH_README.md  TEAM_D_COMPLETION_REPORT.md  UI_SYSTEM_STATUS.md  chain_of_thought.py  check_ollama.py  cli.py  day_dreaming.py  daydreamer_ai.py  daydreamer_memory.db  daydreamer_multi_agent_design_v_2.md  demo_task_scheduler.py  dmn_demo.py  launch_chat.py  main.py  memory_manager.py  memory_store.db  ollama_integration.py  prompts.py  pyproject.toml  quick_start.py  requirements.txt  research_chat.py  research_chat_memory.db  research_config.ini  setup.py  simple_chat_memory.db  test_agent_demo.py  test_cli_only.py  test_cli_standalone.py  test_dmn_system.py  (+7 more)
.agents/: restructuring_progress.md
daydreamer/: __init__.py  cli.py  core.py  models.py  utils.py
daydreamer/tests/: __init__.py  test_core.py  test_models.py  test_utils.py
docs/: AGENTS.MD
examples/: basic_usage.py  training_example.py
legacy/: chat_interface.py  enhanced_chat.py  minimal_chat.py  research_chat.py  simple_chat.py  working_chat.py
organizer/: README.md  SYSTEM_OVERVIEW.md  ai_model_analysis.md  builder_assignment.py  builder_setup.py  gemma3n_setup.md  get_tasks.sh  setup_builder.sh  task_registry.json
src/: __init__.py  models.py
src/agents/: __init__.py  agent.py  (+2 more)
static/: index.html
tests/: AGENTS.MD  __init__.py  test_agent.py  test_memory_system.py  test_task_scheduler.py
web_app/: Dockerfile  README.md  database.py  index.html  main.py  package-lock.json  package.json  requirements.txt  setup.py  start.py  tailwind.config.js  test_main.py  tsconfig.json  vite.config.ts
(+90 files in other folders)
